--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -286,6 +286,15 @@ display: {{post.but3}};
     </div>
 </div>
 </body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RM7BLCWB9R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RM7BLCWB9R');
+</script>
 <script>
     let json="/css/Home.json";
     let httprequest = new XMLHttpRequest();
