--- a/templates/views/checkout.hbs
+++ b/templates/views/checkout.hbs
@@ -90,6 +90,15 @@
     </div>
 </div>
 </body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RM7BLCWB9R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RM7BLCWB9R');
+</script>
 <script>
     function validateForm() {
   var x = document.forms["myForm"]["card"].value;
