--- a/templates/views/index3.hbs
+++ b/templates/views/index3.hbs
@@ -50,6 +50,15 @@
     </form>
 </div>
 </body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RM7BLCWB9R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RM7BLCWB9R');
+</script>
 <script>
 let json="/css/living.json";
     let httprequest = new XMLHttpRequest();
