--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -107,6 +107,15 @@
 </div>
 </div>
 </body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RM7BLCWB9R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RM7BLCWB9R');
+</script>
 <script>
        let json="/css/login.json";
     let httprequest = new XMLHttpRequest();
