--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -63,6 +63,7 @@
 </div>
 </form>
 </body>
+
 <script>
     let h=document.getElementById('submit');
     h.addEventListener('click',upload)
@@ -199,5 +200,14 @@
     function upload(){
         let option= document.getElementById('select').value;
     }
+</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RM7BLCWB9R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RM7BLCWB9R');
 </script>
 </html>
